feat:填充简历内容

--- a/src/jade/layout/resume-layout.jade
+++ b/src/jade/layout/resume-layout.jade
@@ -9,8 +9,6 @@ block style
 
 block header
   header.row
-    figure.header-qrcode
-      +responsive("qrcode", contact.wechat, "invisible-lt-sm visible-print")
     section.title
       h1= name
       h2= job_description.join("/")
@@ -20,17 +18,14 @@ block header
         +email(contact.email)
         +github(contact.github)
         +blog(contact.blog)
-        +sinaweibo(contact.sinaweibo)
-        +responsive("wechat", contact.wechat, "visible-lt-sm invisible-print")
 
 block content
   article.content.row
-    article.column-6.first.column
       block education
-      block language
       block experience
-    article.column-6.last.column
       block skills
+    //- article.column-6.first.column
+    //- article.column-6.last.column
 
 
 block footer
@@ -38,7 +33,7 @@ block footer
     block repo
 
 
-block sidebar
+//- block sidebar
   aside
     block links
 
