--- a/src/jade/mixins/util.jade
+++ b/src/jade/mixins/util.jade
@@ -1,3 +1,9 @@
+mixin profile(profile)
+  li.contact-profile&attributes(attributes)= profile
+  
+mixin education(education)
+  li.contact-education&attributes(attributes)= education
+
 mixin phone(number)
   li.contact-phone&attributes(attributes)= number
 
