--- a/src/less/components/header.less
+++ b/src/less/components/header.less
@@ -74,6 +74,8 @@ header a:hover, header a:active {
     color: @secondary-light-color;;
 }
 
+.set-li-icon(contact-profile, @fa-var-user);
+.set-li-icon(contact-education, @fa-var-book);
 .set-li-icon(contact-phone, @fa-var-phone);
 .set-li-icon(contact-email, @fa-var-envelope);
 .set-li-icon(contact-github, @fa-var-github-square);
